syntax = "proto3";
package product.v1;

import "google/protobuf/empty.proto";

service ProductService {
  rpc Create(CreateRequest) returns (Product);
  rpc Get(GetRequest) returns (Product);
  rpc Update(UpdateRequest) returns (Product);
  rpc Delete(GetRequest) returns (DeleteResponse);

  rpc ListBulk(google.protobuf.Empty) returns (ListBulkResponse);
  rpc ListFull(google.protobuf.Empty) returns (stream Product);
}

message Product {
  string id = 1;
  string name = 2;
  string type = 3;
}

// Requests
message CreateRequest {
  string name = 1;
  string type = 2;
}

message GetRequest {
  string id = 1;
}

message UpdateRequest {
  string id = 1;
  string name = 2;
  string type = 3;
}

// Responses
message DeleteResponse {
  bool success = 1;
}

message ListBulkResponse {
  repeated Product products = 1;
}
